responsive image on schedule page

--- a/schedule.html
+++ b/schedule.html
@@ -91,7 +91,23 @@
         <div class="row">
           <div class="col-md-6">
             <h1 class="mt-3">Schedule</h1>
-            <img src="images/ringhands.jpeg" class="rounded img-fluid" width="90%" alt="Ring Hands">
+            <img
+              sizes="(max-width: 1000px) 350px, (max-width: 1200px) 450px, (max-width: 1400px) 550px, 630px"
+              srcset="
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_200.jpg 200w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_497.jpg 497w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_705.jpg 705w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_868.jpg 868w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_976.jpg 976w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1072.jpg 1072w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1089.jpg 1089w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1172.jpg 1172w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1215.jpg 1215w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1260.jpg 1260w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1236.jpg 1236w,
+                images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1400.jpg 1400w"
+              src="images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1400.jpg"
+              alt="">
           </div>
           <div class="col-md-6 d-flex flex-column justify-content-center">
             <h1 class="mt-3"></h1>
