--- a/thank-you.html
+++ b/thank-you.html
@@ -115,7 +115,7 @@
             images/Birds_jwo395/Birds_jwo395_c_scale,w_1328.png 1328w,
             images/Birds_jwo395/Birds_jwo395_c_scale,w_1377.png 1377w,
             images/Birds_jwo395/Birds_jwo395_c_scale,w_1400.png 1400w"
-          src="Birds_jwo395_c_scale,w_1400.png"
+          src="images/Birds_jwo395/Birds_jwo395_c_scale,w_1400.png"
           alt="">     
         </div> 
 
