responsive images in travel

--- a/faq.html
+++ b/faq.html
@@ -330,14 +330,14 @@
         </script>
 
         <div class="text-center" style="padding-bottom: 1rem">
-          <img
+          <img loading="lazy"
             sizes="(max-width: 962px) 30vw, (max-width: 1200px) 200px, 200px"
             srcset="
               images/PixelHeart_ti7bw3/PixelHeart_ti7bw3_c_scale,w_200.png 200w,
               images/PixelHeart_ti7bw3/PixelHeart_ti7bw3_c_scale,w_709.png 709w,
               images/PixelHeart_ti7bw3/PixelHeart_ti7bw3_c_scale,w_962.png 962w"
             src="images/PixelHeart_ti7bw3/PixelHeart_ti7bw3_c_scale,w_962.png"
-            alt="">        
+            alt="Pixel Rainbow Heart">        
           </div>  
       </div>
     </main>
