--- a/thank-you.html
+++ b/thank-you.html
@@ -95,7 +95,7 @@
       </div>
 
       <div class="text-center" style="padding:1rem">
-        <img
+        <img loading="lazy"
           sizes="(max-width: 1400px) 50vw, 700px"
           srcset="
             images/Birds_jwo395/Birds_jwo395_c_scale,w_200.png 200w,
@@ -116,7 +116,7 @@
             images/Birds_jwo395/Birds_jwo395_c_scale,w_1377.png 1377w,
             images/Birds_jwo395/Birds_jwo395_c_scale,w_1400.png 1400w"
           src="images/Birds_jwo395/Birds_jwo395_c_scale,w_1400.png"
-          alt="">     
+          alt="Bird Stamp">     
         </div> 
 
     </main>
