--- a/schedule.html
+++ b/schedule.html
@@ -107,7 +107,7 @@
                 images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1236.jpg 1236w,
                 images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1400.jpg 1400w"
               src="images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_1400.jpg"
-              alt="">
+              alt="Ring Hands Clasped">
           </div>
           <div class="col-md-6 d-flex flex-column justify-content-center">
             <h1 class="mt-3"></h1>
