use webp for jumbotron

--- a/faq.html
+++ b/faq.html
@@ -28,11 +28,11 @@
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
 
     <!-- Preload Banner Image -->
-    <link rel="preload" href="../images/foreheadkiss.jpeg" as="image">
+    <link rel="preload" href="../images/foreheadkiss.webp" as="image">
 
     <style>
       .jumbotron-faq {
-        background-image: url("../images/foreheadkiss.jpeg");
+        background-image: url("../images/foreheadkiss.webp");
       }
 
       .faq-question {
