--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="./css/custom.css" rel="stylesheet">
 
     <!-- Preload Background Image -->
-    <link rel="preload" href="images/cover_background.jpeg" as="image">
+    <link rel="preload" href="images/cover_background.webp" as="image">
 
     <!-- Inline Critical CSS -->
     <style>
@@ -99,7 +99,7 @@
 
       /* Custom styles for background image */
       body {
-        background-image: url('images/cover_background.jpeg');
+        background-image: url('images/cover_background.webp');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
