--- a/rsvp.html
+++ b/rsvp.html
@@ -26,11 +26,11 @@
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
 
     <!-- Preload Banner Image -->
-    <link rel="preload" href="../images/mountainblur.jpeg" as="image">
+    <link rel="preload" href="../images/mountainblur.webp" as="image">
 
     <style>
       .jumbotron-rsvp {
-        background-image: url("../images/mountainblur.jpg");
+        background-image: url("../images/mountainblur.webp");
       }
 
       .rsvpcard {
