--- a/story.html
+++ b/story.html
@@ -26,11 +26,11 @@
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
   
     <!-- Preload Banner Image -->
-    <link rel="preload" href="../images/cheekkiss.jpeg" as="image">
+    <link rel="preload" href="../images/cheekkiss.webp" as="image">
 
     <style>
       .jumbotron-story {
-        background-image: url("../images/cheekkiss.jpeg");
+        background-image: url("../images/cheekkiss.webp");
       }
 
       img {
