--- a/thank-you.html
+++ b/thank-you.html
@@ -17,11 +17,11 @@
     <link href="./css/custom.css" rel="stylesheet">
 
     <!-- Preload Banner Image -->
-    <link rel="preload" href="../images/dancing.jpeg" as="image">
+    <link rel="preload" href="../images/dancing.webp" as="image">
 
     <style>
       .jumbotron-ty {
-        background-image: url("../images/dancing.jpeg");
+        background-image: url("../images/dancing.webp");
       }
     </style>
 
