last webp conversion

--- a/schedule.html
+++ b/schedule.html
@@ -26,11 +26,11 @@
     <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
 
     <!-- Preload Banner Image -->
-    <link rel="preload" href="../images/rockhands.jpeg" as="image">
+    <link rel="preload" href="../images/rockhands.webp" as="image">
 
     <style>
       .jumbotron-schedule {
-        background-image: url("../images/rockhands.jpeg");
+        background-image: url("../images/rockhands.webp");
       }
 
       .schedule {
