--- a/schedule.html
+++ b/schedule.html
@@ -92,7 +92,7 @@
           <div class="col-md-6">
             <h1 class="mt-3">Schedule</h1>
             <img
-              sizes="(max-width: 1000px) 350px, (max-width: 1200px) 450px, (max-width: 1400px) 550px, 630px"
+              sizes="(max-width: 500px) 200px, (max-width: 1000px) 350px, (max-width: 1200px) 450px, (max-width: 1400px) 550px, 630px"
               srcset="
                 images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_200.jpg 200w,
                 images/ringhands_lv8fm3/ringhands_lv8fm3_c_scale,w_497.jpg 497w,
