mess with things-to-do images

--- a/travel.html
+++ b/travel.html
@@ -276,9 +276,9 @@
 
         <div id="things-to-do" style="padding-top: 60px" class="container">
           <div class="row text-center">
-            <div class="col-12 col-md-4">
+            <div class="col-4">
               <img loading="lazy"
-                sizes="(max-width: 1000px) 200px, (max-width: 1200px) 250px, (max-width: 1350px) 300px, (max-width: 1500px) 350px, 400px"
+                sizes="(max-width: 500px) 120px, (max-width: 900px) 150px, (max-width: 1040px) 200px, (max-width: 1200px) 250px, (max-width: 1350px) 300px, (max-width: 1500px) 350px, 400px"
                 srcset="
                   images/goldhillinn_ljmmdn/goldhillinn_ljmmdn_c_scale,w_200.jpg 200w,
                   images/goldhillinn_ljmmdn/goldhillinn_ljmmdn_c_scale,w_388.jpg 388w,
@@ -287,9 +287,9 @@
                 src="images/goldhillinn_ljmmdn/goldhillinn_ljmmdn_c_scale,w_640.jpg"
                 alt="Gold Hill Inn">            
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-4">
               <img loading="lazy"
-                sizes="(max-width: 1000px) 200px, (max-width: 1200px) 250px, (max-width: 1350px) 300px, (max-width: 1500px) 350px, 400px"
+                sizes="(max-width: 500px) 120px, (max-width: 900px) 150px, (max-width: 1040px) 200px, (max-width: 1200px) 250px, (max-width: 1350px) 300px, (max-width: 1500px) 350px, 400px"
                 srcset="
                   images/dushanbe_dae799/dushanbe_dae799_c_scale,w_200.jpg 200w,
                   images/dushanbe_dae799/dushanbe_dae799_c_scale,w_393.jpg 393w,
@@ -304,9 +304,9 @@
                 src="dushanbe_dae799_c_scale,w_1200.jpg"
                 alt="Dushanbe Tea House">            
               </div>
-            <div class="col-12 col-md-4">
+            <div class="col-4">
               <img loading="lazy"
-                sizes="(max-width: 1000px) 200px, (max-width: 1200px) 250px, (max-width: 1350px) 300px, (max-width: 1500px) 350px, 400px"
+                sizes="(max-width: 500px) 120px, (max-width: 900px) 150px, (max-width: 1040px) 200px, (max-width: 1200px) 250px, (max-width: 1350px) 300px, (max-width: 1500px) 350px, 400px"
                 srcset="
                   images/indianpeaks_bp853d/indianpeaks_bp853d_c_scale,w_200.jpg 200w,
                   images/indianpeaks_bp853d/indianpeaks_bp853d_c_scale,w_407.jpg 407w,
