--- a/faq.html
+++ b/faq.html
@@ -307,9 +307,9 @@
         </p>
         <div class="collapse" id="collapseRegistry">
           <div class="card card-body"><p>
-            Your presence is all the gift we need! Seriously, thank you for celebrating our union with us. <br><br>
-            If you do feel called to give more, we will put together a wish-list and honey moon fund to help you out with ideas. Check back soon.
-           </p></div>
+            Your presence is all the gift we need! Seriously, thank you for celebrating our union with us. We know a lot of our guests had to make sacrifices to make it, and we are so grateful.<br><br>
+            If you do feel called to give more, we put together a honey moon fund and wish-list to give you some ideas of items that will help build our life together.
+            Here is our optional <a href="" class="text-body-secondary">registry</a>.
         </div>
         <br>
         <script>
