--- a/schedule.html
+++ b/schedule.html
@@ -120,9 +120,9 @@
             <h3 class="mt-3">Saturday, August 23</h3>
             <p>The big event!</p>
             <p>Location: Planet Bluegrass, Lyons, CO</p>
-            <p>Ceremony: <b>TBD</b><br>
-              Cocktails: <b>TBD</b><br>
-              Reception: <b>TBD</b> - 10 PM</pp>
+            <p>Ceremony: 3:15 PM<br>
+              Cocktails: 4 PM - 5:30 PM<br>
+              Reception: 5:30 PM - 10 PM</pp>
 
             <p>Dress: Dress your best - your best for you to feel your best. We want you to be comfortable and ready to dance.<br><br>
               While this is a formal event, please wear appropriate footwear for walking on a grassy lawn and consider bringing an extra layer. Colorado regularly has 30° temperature swings between day and night.<br><br>
