change description of landing page (appears when texted)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wedding J&M</title>
-    <meta name="description" content="Landing page for Julia and Maggie's Wedding at Planet Bluegrass.">
+    <meta name="description" content="Join the J&M! Celebrate Julia and Maggie's Wedding at Planet Bluegrass.">
     <meta name="author" content="Julia Kent">
 
     <!-- Preload Bootstrap CSS -->
