--- a/thank-you.html
+++ b/thank-you.html
@@ -38,8 +38,8 @@
   <body>
     <nav class="navbar navbar-expand-md fixed-top">
       <div class="container-fluid nav-text-container" style="margin: 0; padding: 0;">
-        <a class="navbar-brand nav-link fw-bold py-1 px-0 active" href="index.html" style="font-size: 1em">
-          <img src="images/JandM.svg" alt="J&M" style="height: 1.5em; margin:0;">
+        <a class="navbar-brand nav-link fw-bold py-1 px-0 active" href="index.html" style="font-size: 1em;">
+          <img src="images/JandM.svg" alt="J&M" style="height: 1.5em;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -67,7 +67,7 @@
           </ul>
         </div>
       </div>
-    </nav>    
+    </nav>   
 
     <main class="main-content">
       <div class="jumbotron jumbotron-fluid jumbotron-ty">
@@ -89,6 +89,7 @@
           Thank you, Peter Marek (<a href="https://rabbitjewelryco.myportfolio.com/work" class="text-body-secondary">Rabbit Jewelry Co.</a>) for our beautiful rings (and the ring photos), <br><br>
           <a href="https://linktr.ee/katiecurcioart" class="text-body-secondary">Katie Curcio</a> for agreeing to live paint, <br><br>
           <a href="https://www.fiverr.com/veronikawunder" class="text-body-secondary">Veronika Wunder</a> for the custom fantasy map, <br><br>
+          Thank you Beethoven! <br><br>
           and of course thank you to <a href="https://angiewilderphoto.com/" class="text-body-secondary">Angie Wilder</a>, whose photography is featured so prominently throughout this site, for the engagement photoshoot. <br><br>
           Thank you for everyone for making the effort to celebrate with us. We know a lot of our family had to travel far.
         </p>
