--- a/schedule.html
+++ b/schedule.html
@@ -111,27 +111,24 @@
           </div>
           <div class="col-md-6 d-flex flex-column justify-content-center">
             <h1 class="mt-3"></h1>
+
             <h3 class="mt-3">Friday, August 22</h3>
             <p>We are planning to have a welcome party to greet those traveling in from out of town.</p>
-            <p>Location: <b>TBD</b> in Lyons, CO</p>
+            <p>Location: The Rock Garden in Lyons, CO</p>
             <p>Time: <b>TBD</b></p>
-            <p>Dress: Smart Casual</p>
+            <p>Dress: Smart casual with a festive party vibe. Wear breathable fabrics for a hot summer evening outside.</p>
 
             <h3 class="mt-3">Saturday, August 23</h3>
             <p>The big event!</p>
             <p>Location: Planet Bluegrass, Lyons, CO</p>
             <p>Ceremony: 3:15 PM<br>
-              Cocktails: 4 PM - 5:30 PM<br>
+              Refreshments: 4 PM - 5:30 PM<br>
               Reception: 5:30 PM - 10 PM</pp>
 
             <p>Dress: Dress your best - your best for you to feel your best. We want you to be comfortable and ready to dance.<br><br>
               While this is a formal event, please wear appropriate footwear for walking on a grassy lawn and consider bringing an extra layer. Colorado regularly has 30° temperature swings between day and night.<br><br>
               And a little reminder: no white.</p>
-            <h3 class="mt-3">Sunday, August 24</h3>
-            <p>Join us for a casual brunch before your flight home.</p>
-            <p>Location: <b>TBD</b> in Lyons, CO</p>
-            <p>Time: <b>TBD</b></p>
-            <p>Dress: Anything goes!</p>
+
           </div>
         </div>
       </div>
