--- a/travel.html
+++ b/travel.html
@@ -218,7 +218,7 @@
         </div>
 
         <div class="text-center">
-          <img src="images/fantasy_map.jpeg" width="60%" class="mx-auto d-block" alt="Fantasy Map" ondblclick="popImage(this.src)">
+          <img src="images/fantasy_map.png" width="60%" class="mx-auto d-block" alt="Fantasy Map" ondblclick="popImage(this.src)">
         </div> 
         <div class="overlay" onclick="closeOverlay()">
           <img src="" alt="Expanded Image">
