--- a/schedule.html
+++ b/schedule.html
@@ -42,6 +42,11 @@
           width: 95%;
         }
       }
+      @media (max-width: 769px) {
+        .ceremony-map {
+          width: 70%
+        }
+      }
     </style>
   </head>
 
@@ -121,9 +126,9 @@
             <h3 class="mt-3">Saturday, August 23</h3>
             <p>The big event!</p>
             <p>Location: Planet Bluegrass, Lyons, CO</p>
-            <p>Ceremony: 3:15 PM<br>
-              Refreshments: 4 PM - 5:30 PM<br>
-              Reception: 5:30 PM - 10 PM</pp>
+            <p>1. Ceremony: 3:15 PM<br>
+              2. Refreshments: 4 PM - 5:30 PM<br>
+              3. Reception: 5:30 PM - 10 PM</pp>
 
             <p>Dress: Dress your best - your best for you to feel your best. We want you to be comfortable and ready to dance.<br><br>
               While this is a formal event, please wear appropriate footwear for walking on a grassy lawn and consider bringing an extra layer. Colorado regularly has 30° temperature swings between day and night.<br><br>
@@ -133,9 +138,29 @@
         </div>
       </div>
 
+      <div class="text-center" style="padding-bottom: 1rem;">
+        <img src="images/planet_bluegrass_map.png" width="40%" class="mx-auto d-block ceremony-map" alt="Ceremony Map" style="border:2px solid;" ondblclick="popImage(this.src)">
+      </div>  
+      <div class="overlay" onclick="closeOverlay()">
+        <img src="" alt="Expanded Image">
+      </div> 
+
       <div class="text-center">
         <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&bgcolor=%23ffffff&showCalendars=0&showTabs=0&mode=AGENDA&showNav=0&showPrint=0&title=Wedding%20J%26M&src=N2QzOTZiZDkyY2I1NDA5MWEzYTBiYTMyMzFmY2Q2MTYxMmU2MDhmOTQyZWY3YTg1OGZiYzhlODQyZjIxZDYxZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&dates=20250801/20250823" class="schedule" style="border:solid 1px #777" frameborder="0" scrolling="no"></iframe>
       </div>  
+
+      <script>
+        function popImage(src) {
+            const overlay = document.querySelector('.overlay');
+            overlay.style.display = 'flex';
+            overlay.querySelector('img').src = src;
+        }
+    
+        function closeOverlay() {
+            const overlay = document.querySelector('.overlay');
+            overlay.style.display = 'none';
+        }
+      </script>
     </main>
 
     <footer class="py-3 my-4 border-top bg-light">
