notes from Karen

--- a/story.html
+++ b/story.html
@@ -139,7 +139,7 @@
                   <h2>Julia Kent</h2>
                   <p>Julia is from the mid-Hudson Valley New York. She moved to Colorado in 2016 to study Atmospheric and Oceanic Sciences at CU Boulder immediately after graduating from the University of Rochester.
                     Since 2019 she has worked as a scientist/software engineer creating tooling for climate analysis at the National Center for Atmospheric Research.
-                    She loves to knit, read fantasy, and swim-bike-run triathlons</p>
+                    She loves to knit, read fantasy, and swim-bike-run triathlons.</p>
               </div>
               <div class="col-md-6">
                   <img src="images/ny.png" alt="NY Topo" class="img-fluid">
