--- a/travel.html
+++ b/travel.html
@@ -173,7 +173,7 @@
               <div class="container" width="40%">
                 <p>The Planet Bluegrass Ranch is located off of Highway 36 just
                   North of the historic town of Lyons, CO. Bordered by the Saint
-                  Vrain, it is about 30 minutes North of Boulder, and an
+                  Vrain Creek, it is about 30 minutes North of Boulder, and an
                   hour from Denver or Fort Collins.
                 </p>
               </div>
@@ -210,10 +210,10 @@
           <h4 class="mt-3"><i class="fas fa-bus"></i> Busses and Shuttles:</h3>
             <ul>
               <li>The <a href="https://eightblackairportshuttle.com/" class="text-body-secondary">Eight Black Airport Shuttle</a> is a great option for door-to-door (airport to hotel) service from DIA.</li>
-              <li>Consider taking the <a href=" rtd-denver.com" class="text-body-secondary">Regional Transportation District</a>. <br>
+              <li>Consider taking the <a href="https://rtd-denver.com" class="text-body-secondary">Regional Transportation District</a>. <br>
               The (RTD) <a href="https://app.rtd-denver.com/route/AB1/schedule" class="text-body-secondary">AB Line</a> from the airport to downtown Boulder,
-              and the <a href="townoflyons.com/370/Sustainability-Resources-Transportation" class="text-body-secondary">Lyons Flyer</a> goes from downtown Boulder to Lyons.</li>
-              <li>There is also a <a href="bouldercounty.gov/transportation/multimodal/lyons-taxi-voucher-program/" class="text-body-secondary">Lyons taxi voucher program</a> that is worth looking into.</li>  
+              and the <a href="https://townoflyons.com/370/Sustainability-Resources-Transportation" class="text-body-secondary">Lyons Flyer</a> goes from downtown Boulder to Lyons.</li>
+              <li>There is also a <a href="https://bouldercounty.gov/transportation/multimodal/lyons-taxi-voucher-program/" class="text-body-secondary">Lyons taxi voucher program</a> that is worth looking into.</li>  
             </ul>
         </div>
 
@@ -355,7 +355,7 @@
           <h4 class="mt-3">Lyons</h3>
             <ul>
               <li>The <a href="https://www.stvrainmarket.com/" class="text-body-secondary">St. Vrain Market</a> has THE best sandwiches.
-                This is a great stop before your day's adventure. Don't sleep on their Cherry Garcia cookie.</li>
+                This is a great stop before your day's adventure. Don't miss out on their Cherry Garcia cookie.</li>
               <li>The <a href="https://www.moxiebreadco.com/" class="text-body-secondary">Moxie Bread Company</a> has equally delicious whole wheat and gluten free loaves.
                 This is a great place to grab morning treats and coffee.</li>
               <li><a href="https://https://oskarblues.com/" class="text-body-secondary">Oscar Blues Brewing</a> is a good stop for beer, wings, and/or trivia.</li>
