--- a/schedule.html
+++ b/schedule.html
@@ -120,20 +120,26 @@
             <h3 class="mt-3">Friday, August 22</h3>
             <p>We are planning to have a welcome party to greet those traveling in from out of town.</p>
             <p>Location: The Rock Garden in Lyons, CO</p>
-            <p>Time: <b>TBD</b></p>
+            <p>Time: <b>TBA</b></p>
             <p>Dress: Smart casual with a festive party vibe. Wear breathable fabrics for a hot summer evening outside.</p>
 
             <h3 class="mt-3">Saturday, August 23</h3>
             <p>The big event!</p>
             <p>Location: Planet Bluegrass, Lyons, CO</p>
-            <p>1. Ceremony: 3:15 PM<br>
-              2. Refreshments: 4 PM - 5:30 PM<br>
-              3. Reception: 5:30 PM - 10 PM</pp>
+            <p>Time: ~3 P.M. - 10 P.M.<br>
+              Detailed schedule: <b>TBA</b>
+            </p>
 
-            <p>Dress: Dress your best - your best for you to feel your best. We want you to be comfortable and ready to dance.<br><br>
-              While this is a formal event, please wear appropriate footwear for walking on a grassy lawn and consider bringing an extra layer. Colorado regularly has 30° temperature swings between day and night.<br><br>
-              And a little reminder: no white.</p>
+            <p>Dress: Dress to impress and to feel your best. We want you to be comfortable and ready to dance.<br><br>
+              While this is a formal event, please wear appropriate footwear for walking on a grassy lawn and consider bringing an extra layer. Colorado regularly has 30° temperature swings between day and night. 
+              And a gentle reminder: no white.</p>
 
+            <h3 class="mt-3">Sunday, August 24</h3>
+            <p>Swing by for hugs on your way out of town. We will be gathering with some coffee carafes to say our goodbyes. Mimosas and breakfast burritos for purchase.</p>
+            <p>Location: The Rock Garden in Lyons, CO</p>
+            <p>Time: <b>TBA</b></p>
+            <p>Dress: Whatever is comfortable. Pajamas acceptable.</p>
+  
           </div>
         </div>
       </div>
@@ -144,6 +150,13 @@
       <div class="overlay" onclick="closeOverlay()">
         <img src="" alt="Expanded Image">
       </div> 
+      <div style="text-align: center;">
+        <p style="display: inline-block; text-align: left;">
+          <b>Planet Bluegrass Key: <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;1. Ceremony<br>
+            &nbsp;&nbsp;&nbsp;&nbsp;2. Hors d'Oeuvres & Socializing <br>
+            &nbsp;&nbsp;&nbsp;&nbsp;3. Reception - Dinner & Dancing</b></p>
+      </div>
 
       <div class="text-center">
         <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&bgcolor=%23ffffff&showCalendars=0&showTabs=0&mode=AGENDA&showNav=0&showPrint=0&title=Wedding%20J%26M&src=N2QzOTZiZDkyY2I1NDA5MWEzYTBiYTMyMzFmY2Q2MTYxMmU2MDhmOTQyZWY3YTg1OGZiYzhlODQyZjIxZDYxZEBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23F09300&dates=20250801/20250823" class="schedule" style="border:solid 1px #777" frameborder="0" scrolling="no"></iframe>
