--- a/travel.html
+++ b/travel.html
@@ -173,8 +173,8 @@
               <div class="container" width="40%">
                 <p>The Planet Bluegrass Ranch is located off of Highway 36 just
                   North of the historic town of Lyons, CO. Bordered by the Saint
-                  Vrain Creek, it is about 30 minutes North of Boulder, and an
-                  hour from Denver or Fort Collins.
+                  Vrain Creek, it is about 30 minutes North of Boulder and an
+                  hour from Denver or Fort Collins. There will be plenty of parking at the venue.
                 </p>
               </div>
               <p><i class="fas fa-map-marker-alt"></i>
@@ -198,7 +198,7 @@
         <div id="getting-there" style="padding-top:60px">
           <h3 class="mt-3">Getting There</h3>
           <h4 class="mt-3"><i class="fas fa-plane"></i> Flying</h3>
-          <p>We recommend flying into Denver International Airport (DIA)!</p>
+          <p>We recommend flying into Denver International Airport (DIA).</p>
 
           <div class="alert alert-secondary" role="alert">
             If coming from sea level, please be mindful of the altitude: wear sunscreen, drink lots of water, and pace your alcohol consumption.
@@ -358,7 +358,7 @@
                 This is a great stop before your day's adventure. Don't miss out on their Cherry Garcia cookie.</li>
               <li>The <a href="https://www.moxiebreadco.com/" class="text-body-secondary">Moxie Bread Company</a> has equally delicious whole wheat and gluten free loaves.
                 This is a great place to grab morning treats and coffee.</li>
-              <li><a href="https://https://oskarblues.com/" class="text-body-secondary">Oscar Blues Brewing</a> is a good stop for beer, wings, and/or trivia.</li>
+              <li><a href="https://https://oskarblues.com/" class="text-body-secondary">Oscar Blues Brewing</a> is a good stop for beer.</li>
             </ul>
 
           <h4 class="mt-3">Boulder</h3>
