--- a/rsvp.html
+++ b/rsvp.html
@@ -89,15 +89,8 @@
         </div>
       </div>
 
-      <div class="container" style="padding-top:1rem">
-        <p style="margin-bottom:0 !important">For groups, please search the first name on your invitation. Let us know if you have any difficulty submitting the form.</p>
-      </div>
-
       <div class="text-center" style="text-align: center;">
-        <iframe class="rsvpcard"
-          style="display: block; border: none; overflow: hidden; margin-left: auto; margin-right: auto; color-scheme: light" 
-          src="https://weddingjam.anrsvp.com/?embed=true">
-        </iframe>
+        <script type="text/javascript" src="https://wedding-jam.rsvpify.com/embed"></script>
       </div>
     </main>
 
