rm booked lodging and extra for

--- a/thank-you.html
+++ b/thank-you.html
@@ -91,7 +91,7 @@
           Plume and Furrow, <br><br>
           thank you Beethoven and the Farm at Sparrow Hill, <br><br>
           and of course thank you to <a href="https://angiewilderphoto.com/" class="text-body-secondary">Angie Wilder</a>, whose photography is featured so prominently throughout this site, for the engagement photoshoot. <br><br>
-          Thank you for everyone for making the effort to celebrate with us. We know a lot of our family had to travel far.
+          Thank you everyone for making the effort to celebrate with us. We know a lot of our family had to travel far.
         </p>
       </div>
 
