--- a/travel.html
+++ b/travel.html
@@ -200,7 +200,7 @@
           <h4 class="mt-3"><i class="fas fa-plane"></i> Flying</h3>
           <p>We recommend flying into Denver International Airport (DIA).</p>
 
-          <div class="alert alert-secondary" role="alert">
+          <div class="alert alert-secondary" role="alert" style="background-color:white">
             If coming from sea level, please be mindful of the altitude: wear sunscreen, drink lots of water, and pace your alcohol consumption.
           </div>
 
@@ -209,11 +209,12 @@
 
           <h4 class="mt-3"><i class="fas fa-bus"></i> Busses and Shuttles:</h3>
             <ul>
+              <li><b>We are organizing a shuttle service from a designated hotel in Boulder, CO to our wedding events.</b> More information to come.</li>
               <li>The <a href="https://eightblackairportshuttle.com/" class="text-body-secondary">Eight Black Airport Shuttle</a> is a great option for door-to-door (airport to hotel) service from DIA.</li>
               <li>Consider taking the <a href="https://rtd-denver.com" class="text-body-secondary">Regional Transportation District</a>. <br>
               The (RTD) <a href="https://app.rtd-denver.com/route/AB1/schedule" class="text-body-secondary">AB Line</a> from the airport to downtown Boulder,
               and the <a href="https://townoflyons.com/370/Sustainability-Resources-Transportation" class="text-body-secondary">Lyons Flyer</a> goes from downtown Boulder to Lyons.</li>
-              <li>There is also a <a href="https://bouldercounty.gov/transportation/multimodal/lyons-taxi-voucher-program/" class="text-body-secondary">Lyons taxi voucher program</a> that is worth looking into.</li>  
+              <li>Lyft and Uber are always options, as well as the <a href="https://bouldercounty.gov/transportation/multimodal/lyons-taxi-voucher-program/" class="text-body-secondary">Lyons taxi voucher program</a>. Ride share apps may be easier and more affordable if called to and from Boulder.</li>  
             </ul>
         </div>
 
@@ -228,6 +229,10 @@
           <h3 class="mt-3">Lodging</h3>
           <div class="lodging-container">
             <div class="lodging-text">
+              <div>
+                <h4 class="mt-3"><i class="fas fa-hotel"></i> Hotel Block</h4>
+                <p><b>We are organizing a hotel block in Boulder.</b> We will provide shuttle transportation to our welcome party and wedding from this hotel.<br><br>More information to come.</p>
+              </div>
               <div>
                 <h4 class="mt-3"><i class="fas fa-bed"></i> Stonemountain Lodge</h4>
                 <p>Straightforward, warm rooms.</p>
@@ -315,7 +320,7 @@
               Here is where we had our first kiss and where, 4 years later, Julia proposed to Maggie.
               The Inn has an affordable (and delicious) pre-fix dinner and has been the stage for many great bluegrass acts. Check their calendar!
               But be warned, driving or biking here is not for the faint of heart. Expect steep windy dirt roads. If you do make it, check out the General Store and the free nearby camping.</li>
-            <li>Hike 8 miles up and back <a href=https://www.alltrails.com/trail/us/colorado/south-boulder-peak-trail" class="text-body-secondary">South Boulder Peak</a>, where Maggie proposed to Julia at 8,549'. </li>
+            <li>Hike 8 miles up and back <a href="https://bouldercolorado.gov/trail/south-boulder-peak" class="text-body-secondary">South Boulder Peak</a>, where Maggie proposed to Julia at 8,549'. </li>
             <li><a href="https://www.nps.gov/romo/index.htm" class="text-body-secondary">Rocky Mountain National Park</a> is too close by to miss on your trip.
               Check if you need a reservation beforehand.</li>
             <li><a href="https://www.fs.usda.gov/recarea/arp/recarea/" class="text-body-secondary">Indian Peaks Wilderness</a> is a great alternative to Rocky Mountain.
@@ -341,7 +346,7 @@
                 This is a great stop before your day's adventure. Don't miss out on their Cherry Garcia cookie.</li>
               <li>The <a href="https://www.moxiebreadco.com/" class="text-body-secondary">Moxie Bread Company</a> has equally delicious whole wheat and gluten free loaves.
                 This is a great place to grab morning treats and coffee.</li>
-              <li><a href="https://https://oskarblues.com/" class="text-body-secondary">Oscar Blues Brewing</a> is a good stop for beer.</li>
+              <li><a href="https://oskarblues.com/" class="text-body-secondary">Oscar Blues Brewing</a> is a good stop for beer.</li>
             </ul>
 
           <h4 class="mt-3">Boulder</h3>
