--- a/thank-you.html
+++ b/thank-you.html
@@ -84,13 +84,7 @@
           We'd like to thank our families for watching us grow. <br><br>
           Thanks to Planet Bluegrass for hosting us on our special day. <br><br>
           Thank you Phish for introducing us. <br><br>
-          Thank you, Peter Marek (<a href="https://rabbitjewelryco.myportfolio.com/work" class="text-body-secondary">Rabbit Jewelry Co.</a>) for our beautiful rings, <br><br>
-          <a href="https://linktr.ee/katiecurcioart" class="text-body-secondary">Katie Curcio</a> for live painting, <br><br>
-          <a href="https://www.fiverr.com/veronikawunder" class="text-body-secondary">Veronika Wunder</a> for the custom map of our love story, <br><br>
-          Golden Bell Music, <br><br>
-          Plume and Furrow, <br><br>
-          thank you Beethoven and the Farm at Sparrow Hill, <br><br>
-          and of course thank you to <a href="https://angiewilderphoto.com/" class="text-body-secondary">Angie Wilder</a>, whose photography is featured so prominently throughout this site, for the engagement photoshoot. <br><br>
+          Thank you, Peter Marek (<a href="https://rabbitjewelryco.myportfolio.com/work" class="text-body-secondary">Rabbit Jewelry Co.</a>) for our beautiful rings. <br><br>
           Thank you everyone for making the effort to celebrate with us. We know a lot of our family had to travel far.
         </p>
       </div>
