--- a/travel.html
+++ b/travel.html
@@ -206,7 +206,7 @@
 
           <h4 class="mt-3"><i class="fas fa-bus"></i> Busses and Shuttles:</h3>
             <ul>
-              <li><b>We are organizing a shuttle service from a designated hotel in Boulder, CO to our wedding events.</b> More information to come.</li>
+              <li><b>We are organizing a shuttle service from a designated hotel in Boulder, CO to Planet Bluegrass on our wedding dat.</b> More information to come.</li>
               <li>The <a href="https://eightblackairportshuttle.com/" class="text-body-secondary">Eight Black Airport Shuttle</a> is a great option for door-to-door (airport to hotel) service from DIA.</li>
               <li>Consider taking the <a href="https://rtd-denver.com" class="text-body-secondary">Regional Transportation District</a>. <br>
               The (RTD) <a href="https://app.rtd-denver.com/route/AB1/schedule" class="text-body-secondary">AB Line</a> from the airport to downtown Boulder,
@@ -227,7 +227,7 @@
             <div class="lodging-text">
               <div>
                 <h4 class="mt-3"><i class="fas fa-hotel"></i> Hotel Block</h4>
-                <p><b>We are organizing a hotel block in Boulder.</b> We will provide shuttle transportation to our welcome party and wedding from this hotel.<br><br>More information to come.</p>
+                <p><b>We are organizing a hotel block in Boulder.</b> We will provide shuttle transportation to the wedding from this hotel.<br><br>More information to come.</p>
               </div>
               <div>
                 <h4 class="mt-3"><i class="fas fa-bed"></i> Stonemountain Lodge</h4>
